Bug 1897095 - Shift dialogBox when browser is in RDM. r=desktop-theme-reviewers,devtools-reviewers,dao,nchevobbe
Differential Revision: https://phabricator.services.mozilla.com/D217820

UltraBlame original commit: 3285421f7ae253128ba211507e334762ac1a9a33

--- a/devtools/client/responsive/responsive-browser.css
+++ b/devtools/client/responsive/responsive-browser.css
@@ -192,6 +192,30 @@ container
 background
 )
 ;
+-
+-
+rdm
+-
+toolbar
+-
+height
+:
+30px
+;
+-
+-
+rdm
+-
+toolbar
+-
+accomodate
+-
+ua
+-
+height
+:
+60px
+;
 }
 .
 browserContainer
@@ -236,7 +260,16 @@ toolbar
 ;
 height
 :
-30px
+var
+(
+-
+-
+rdm
+-
+toolbar
+-
+height
+)
 ;
 top
 :
@@ -251,6 +284,75 @@ width
 100
 %
 ;
+/
+*
+*
+*
+The
+.
+rdm
+-
+toolbar
+will
+be
+above
+the
+.
+dialogBox
+in
+RDM
+so
+we
+shift
+the
+*
+.
+dialogBox
+down
+by
+the
+height
+of
+the
+.
+rdm
+-
+toolbar
+so
+both
+are
+visible
+*
+/
++
+.
+browserStack
+>
+.
+dialogStack
+>
+.
+dialogTemplate
+>
+.
+dialogBox
+{
+margin
+-
+top
+:
+var
+(
+-
+-
+rdm
+-
+toolbar
+-
+height
+)
+;
+}
 }
 .
 browserContainer
@@ -270,8 +372,128 @@ ua
 {
 height
 :
-60px
+var
+(
+-
+-
+rdm
+-
+toolbar
+-
+accomodate
+-
+ua
+-
+height
+)
 ;
+/
+*
+*
+*
+When
+the
+browser
+window
+is
+less
+than
+520
+pixels
+wide
+the
+RDM
+toolbar
+*
+needs
+extra
+space
+to
+accomdate
+for
+the
+UA
+input
+so
+the
+.
+rdm
+-
+toolbar
+is
+*
+set
+to
+a
+larger
+height
+of
+-
+-
+rdm
+-
+toolbar
+-
+accomodate
+-
+ua
+-
+height
+.
+We
+also
+need
+*
+to
+shift
+the
+.
+dialogBox
+down
+by
+the
+same
+height
+so
+both
+are
+visible
+.
+*
+/
++
+.
+browserStack
+>
+.
+dialogStack
+>
+.
+dialogTemplate
+>
+.
+dialogBox
+{
+margin
+-
+top
+:
+var
+(
+-
+-
+rdm
+-
+toolbar
+-
+accomodate
+-
+ua
+-
+height
+)
+;
+}
 }
 .
 browserContainer
